--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
     "@react-navigation/stack": "^6.3.7",
@@ -23,7 +24,12 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dropdown-select-list": "^2.0.4",
-    "react-native-paper": "^5.0.0-rc.9"
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-paper": "^5.0.0-rc.9",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
